<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">FourthTaskAndroid</string>

    <!-- Labels -->
    <string name="label_filterHint">type in to filter</string>
    <string name="label_itemName">Name</string>
    <string name="label_itemLatitude">Latitude</string>
    <string name="label_itemLongitude">Longitude</string>
    <string name="label_itemColor">Color</string>
    <string name="label_showMap">Show selected items on map</string>
    <string name="label_manageItem">Manage item</string>
    <string name="label_list">List</string>
    <string name="label_map">Map</string>
    <string name="label_degree_Celsius">degree Celsius</string>
    <!-- Menus -->
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_addItem">Add new item</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_filter">Filter list</string>
    <string name="menu_refresh">Refresh</string>
    <!-- Alerts -->
    <string name="alert_data_not_valid">Provided data is not correct</string>
    <string name="alert_item_exists">Item already exists</string>
    <string name="alert_saving_error">Can\'t write list to internal storage.</string>
    <string name="alert_reading_error">Can\'t read list from internal storage.</string>
    <string name="alert_internet_connection_title">Internet connection not available!</string>
    <string name="alert_internet_connection_body">Please enable Mobile data or Wi-Fi.</string>
    <string name="alert_progress_dialog_message">Updating weather data&#8230;</string>
    <!-- Preferences -->
    <string name="preferences_autorefresh_checkbox_title">Auto refresh weather</string>
    <string name="preferences_autorefresh_checkbox_summary">Weather\'s data will be automatically refresher in specified time cycles.</string>
    <string name="preferences_autorefresh_edittext_title">Auto refresh cycle time in minutes.</string>
    <string name="preferences_autorefresh_edittext_summary">Current auto refresh cycle time amounts to %s minutes.</string>
    <string name="preferences_weather_servers_list_title">Default weather server</string>
    <string name="preferences_weather_servers_list_summary">Current weather data comes from %s.</string>
    <string name="preferences_weather_servers_list_default">OpenWeatherMap</string>

</resources>